style(css): update css
This update makes changes to the css file where links inside a paragraph are styled as minimal.css

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ nav{
    text-align: center; 
 }
 
-a{
+nav > a{
     color: #29a482 !important;
     font-weight: bold;
     text-decoration: none;
